@@ -49,7 +49,7 @@
         [ keyF4 0 "F4" /panel.install /panel.install.width /panel.install.update /install.init ]
         [ keyF5 0 "F5" /panel.dud /panel.dud.width /panel.dud.update .undef ]
 
-        do_64bit_check 32+64bit_source and {
+        32+64bit_source {
           64bit {
             32bit_boot_dir .undef ne
             64bit_boot_dir .undef ne
